--- a/netlify.toml
+++ b/netlify.toml
@@ -10,6 +10,11 @@
 
 [functions]
   node_bundler = "esbuild"
+  external_node_modules = ["jsdom"]
+
+# Increase function timeout for AI analysis
+[functions."api/*"]
+  timeout = 60
 
 [[headers]]
   for = "/*"
